syntax = "proto3";

option csharp_namespace = "Discount.Grpc.Protos";


service DiscountProtoService {

	// Adds a new discount.
	rpc CreateDiscount(CreateDiscountRequest) returns (CouponModel);

	// Returns coupon.
	rpc GetDiscount(GetDiscountRequest) returns (CouponModel);

	// Updates the discount.
	rpc UpdateDiscount(UpdateDiscountRequest) returns (CouponModel);

	// Deletes the discount.
	rpc DeleteDiscount(DeleteDiscountRequest) returns (DeleteDiscountResponse);
}

message CreateDiscountRequest {
	CouponModel coupon = 1;
}

message GetDiscountRequest {
	string product_name = 1;
}

message CouponModel {
	int32 id = 1;
	string product_name = 2;
	string description = 3;
	int32 amount = 4;
}

message UpdateDiscountRequest {
	CouponModel coupon = 1;
}

message DeleteDiscountRequest {
	string product_name = 1;
}

message DeleteDiscountResponse {
	bool success = 1;
}